tests/e2e/inline_service_output3.error
Error: syntax error in story at line 1, column 21

1|    a = (listen command as client) + 0
                          ^

E0109: Inline service calls can't define an output
