tests/e2e/inline_service_output3.story
a = (listen command as client) + 0
